--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -27,6 +27,7 @@
       </ul>
       {{partial "toc.html" .}}
       {{partial "textprocessing.html" . }}
+      {{partial "related.html" .}}
     </article>
     {{partial "footer.html" .}}
 </div>
